# pdfree

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PARITY.md  README.md
.claude/: launch.json
core/: Cargo.toml
core/src/: edit.rs  lib.rs  matrix.rs  metadata.rs  model.rs  pagedoc.rs  pageops.rs  reflow.rs  replace.rs  salvage.rs  std14.rs  tounicode.rs  ttf.rs  type3gen.rs  walk.rs
harness/: check_model.py  make_corpus.py  make_fontfidelity_probe.py  make_skia_corpus.py  render_worker.py  run.py
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/public/wasm/: pdfree_wasm.js  pdfree_wasm_bg.wasm
web/scripts/: sync-assets.sh
