[package]
name = "pdfree-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
# default-features off: rayon/chrono/jiff/time aren't WASM-friendly and we
# don't use them; wasm_js wires getrandom for the wasm32 build.
lopdf = { version = "0.43.0", default-features = false, features = ["wasm_js"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
